plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'brokercraft'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

javafx {
    version = '21.0.4'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.base', 'javafx.graphics']
}

dependencies {
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'com.mysql:mysql-connector-j:8.3.0'
    compileOnly 'org.jetbrains:annotations:24.1.0'
}

application {
    mainClass = 'brokercraft.main.Main'
}

tasks.register('runServer', JavaExec) {
    group = 'application'
    description = 'Start BrokerCraft RMI server'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'brokercraft.main.ServerMain'
    jvmArgs += ['-Djava.rmi.server.hostname=127.0.0.1']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
        '--add-opens=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
        '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
        '-Djava.rmi.server.hostname=127.0.0.1'
    ]
}
